--- a/styles/content/main.less
+++ b/styles/content/main.less
@@ -34,7 +34,7 @@ body {
 			font-family: 'Lato', sans-serif;
 			font-size: 18px;
 			font-weight: bold;			
-			padding: 30px 110px;
+			padding: 30px 90px;
 			position: absolute;
 			right: 0;
 			text-transform: uppercase;
@@ -62,6 +62,9 @@ body {
 						&.single {
 							top: 0;
 						}
+					}
+					.alert {
+						margin-left: 5px;
 					}
 				}
 			}
@@ -208,6 +211,14 @@ body {
 				color: #58595b;
 				line-height: 2;
 				position: relative;
+				div {
+					border-right: 1px solid transparent;
+					display: inline-block;				
+					padding-left: 10px;
+					&.selected {
+						font-weight: bold;
+					}
+				}
 				&:last-child {
 					border-bottom: 1px solid #eceaea;
 				}
@@ -239,12 +250,10 @@ body {
 				&.even {
 					background: #ffffff;
 				}
-				.row-date, .row-lastname, .row-firstname, .row-username, .row-email, .row-role, .row-location, .row-active, .row-edit {
-					border-right: 1px solid transparent;
-					display: inline-block;					
-					padding-left: 10px;
-					&.selected {
-						font-weight: bold;
+				&.unread {
+					font-weight: bold;
+					&.marked {
+						color: #ff1d25;
 					}
 				}
 				.row-date {
@@ -276,7 +285,7 @@ body {
 				.row-role {
 					width: 10%;
 				}
-				.row-location {
+				.row-locations {
 					width: 12%;
 				}
 				.row-edit {
@@ -289,6 +298,44 @@ body {
 					right: 0;
 					text-align: center;
 					top: -1px;
+					width: 7%;
+				}
+				.row-status {
+					width: 5%;
+				}
+				.row-upload {
+					width: 10%;
+				}
+				.row-location {
+					width: 8%;
+				}
+				.row-time {
+					width: 8%;
+				}
+				.row-patient-name {
+					width: 8%;
+				}
+				.row-dob {
+					width: 5%;
+				}
+				.row-visit {
+					width: 8%;
+				}
+				.row-device-type {
+					width: 8%;
+				}
+				.row-model {
+					width: 8%;
+				}
+				.row-serial {
+					width: 8%;
+				}
+				.row-mfr {
+					width: 8%;
+				}
+				.row-view {
+					padding: 0;
+					text-align: center;
 					width: 7%;
 				}
 			}
