--- a/styles/content/main.less
+++ b/styles/content/main.less
@@ -9,6 +9,15 @@ body {
 		padding: 2px 3px;
 		position: absolute;
 	}
+	.exclamation-mark {
+		border-bottom: 8px solid #ff1d25;
+		border-left: 8px solid #ff1d25;
+		border-right: 8px solid #ff1d25;
+		border-top: 8px solid #ff1d25;
+		color: #ffffff;
+		position: absolute;
+		top: 20px;
+	}
 	#content {
 		position: relative;
 		h1 {
@@ -24,7 +33,7 @@ body {
 				border-top: 8px solid #cbcbcb;
 				margin-left: 20px;
 				position: absolute;
-				top: 20px;
+				top: 0;
 			}
 		}
 		button {
