--- a/styles/footer/main.less
+++ b/styles/footer/main.less
@@ -14,6 +14,7 @@ footer {
 		.opacity(80);
 		position: fixed;
 		width: 160px;
+		z-index: 1000;
 		span {
 			&.dot, &.dot:before, &.dot:after {
 				background: #ffffff;
