--- a/styles/boilerplate.less
+++ b/styles/boilerplate.less
@@ -11,8 +11,8 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 		display: block;
 }
 body, input, button, textarea, select, td {
-	font-size: 1em;
-	font-family: 'Lato', sans-serif;
+	//font-size: 1em;
+	//font-family: 'Lato', sans-serif;
 	text-rendering: optimizeLegibility; // enable better kerning and ligatures for Webkit. FF has this enabled by default for fonts >= 20px. IE does not support this
 }
 html { width: 100%; height: 100%; }
