--- a/styles/content/main.less
+++ b/styles/content/main.less
@@ -4,7 +4,7 @@ body {
 	.alert {
 		background: #e41d38;
 		color: #ffffff;
-		font-size: 12px;
+		font-size: 0.8rem;
 		font-weight: bold;
 		padding: 2px 3px;
 		position: absolute;
@@ -45,60 +45,134 @@ body {
 	}
 	#content {
 		position: relative;
+		height: 100%;
+		.dropdown-arrow {
+			border-bottom: 0;
+			border-left: 8px solid transparent;
+			border-right: 8px solid transparent;
+			border-top: 8px solid #cbcbcb;			
+			position: absolute;
+		}
 		h1 {
 			color: #58595b;
-			font-size: 36px;
-			font-weight: bold;
+			float: left;
+			font-size: 2.5rem;
 			margin-bottom: 20px;
 			position: relative;
 			.dropdown-arrow {
-				border-bottom: 0;
-				border-left: 8px solid transparent;
-				border-right: 8px solid transparent;
-				border-top: 8px solid #cbcbcb;
 				margin-left: 20px;
-				position: absolute;
 				top: 18px;
 			}
+			&.mri {
+				position: absolute;
+				right: 0;
+				top: 0;
+			}
 		}
-		button {
-			background: #0092a2;
-			border: 1px solid #8cc2c8;
-			color: #ffffff;
-			font-family: 'Lato', sans-serif;
-			font-size: 18px;
-			font-weight: bold;			
-			padding: 30px 90px;
+		h3 {
+			color: #58595b;
+			display: inline-block;
+			font-size: 1.3rem;
+			line-height: 2.8;
+			margin-left: 15px;
+		}		
+		.upload-status {
+			border-bottom: 1px solid #e0dede;
+			border-top: 1px solid #e0dede;
+			margin-bottom: 35px;
+			padding: 12px;
+			position: relative;
+			width: 48%;
+			span {
+				color: #58595b;
+				&.upload-title, &.status-title {
+					.font(lato-black);					
+				}
+			}
+			.dropdown-arrow {
+				right: 20px;
+				top: 28px;
+			}
+		}
+		.button-links {
 			position: absolute;
 			right: 0;
-			text-transform: uppercase;
-			top: 0;
-			span {
-				margin-right: 12px;
+			top: 58px;
+			&.add-user {
+				top: 0;
+				button {
+					background: #0092a2;
+					border: 1px solid #8cc2c8;
+					color: #ffffff;
+					padding: 30px 90px;
+				}
+			}
+			button {
+				background: #f8f8f8;
+				border: 1px solid #e0dede;
+				color: #0092a2;
+				.font(lato-regular);
+				font-size: 1rem;
+				font-weight: bold;
+				padding: 21px 70px 22px;	
+				text-transform: uppercase;
+				span {
+					margin-right: 12px;
+				}
 			}
 		}
 		ul {
 			&.tabs {
+				.clear;
 				li {
 					background: #f5f5f5;
 					border: 1px solid #cbcbcb;
 					color: #0092a2;
-					display: inline-block;
+					//display: inline-block;
+					float: left;
+					margin-left: 0.3%;
 					padding: 13px 40px;
 					position: relative;
 					text-transform: uppercase;
+					//top: 12px;			
 					z-index: 2;
-					&.active {
-						background: #ffffff;
+					&:first-child {
+						margin-left: 0;
+					}
+					&.active {						
 						border-bottom: none;
 						padding-top: 25px;
 						top: 1px;
 						&.single {
 							top: 0;
-						}
+						}						
 					}
-					.alert {
-						margin-left: 5px;
+				}
+				&.concept-b {
+					li {
+						border: 1px solid #dfdedc;
+						color: #ffffff;
+						padding: 25px 0;
+						text-align: center;
+						width: 19.5%;
+						&.active {
+							border-bottom: 0;
+							padding-top: 37px;
+							top: -12px;
+							&.battery, &.lead, &.device {
+								background: #ffffff;
+								color: #0092a2;
+							}
+						}
+						&.battery, &.lead, &.device {
+							background: #3cb6a7;
+						}
+						&.event, &.magent {
+							background: #e21a37;
+						}
+						.alert {
+							margin-left: 5px;
+						}
 					}
 				}
 			}
@@ -108,11 +182,11 @@ body {
 			border-left: 1px solid #cbcbcb;
 			border-right: 1px solid #cbcbcb;
 			border-top: 1px solid #cbcbcb;
+			clear: both;
 			height: 70px;
 			position: relative;
-			top: -1px;
 			&.show {				
-				height: 100%;
+				height: 95px;
 				.advanced-search {
 					display: block;
 				}
@@ -232,7 +306,8 @@ body {
 			}			
 		}
 		#filelist {
-			margin: 8px 10px 0 10px;
+			clear: both;
+			padding: 8px 10px 0 10px;
 			h3 {
 				color: #58595b;
 				font-weight: bold;
@@ -397,6 +472,44 @@ body {
 					width: 7%;
 				}
 			}
+		}
+	}
+	.details {
+		border-top: 1px solid #cbcbcb;
+		clear: both;
+		padding: 12px 0;
+		.details-status {
+			float: left;
+			padding: 11px 0;
+			vertical-align: top;
+			width: 20%;
+			span {
+				color: #58595b;
+				display: block;
+				text-align: center;
+				&:first-child {					
+					.font(lato-black);					
+				}
+			}
+		}
+		.details-list {
+			float: left;
+			width: 80%;
+			div {
+				border-bottom: 1px solid #eceaea;
+				line-height: 2.5;
+				padding: 0 15px;
+				&.even {
+					background: #f4f9fc;
+				}		
+				span {
+					color: #58595b;
+					margin-right: 10px;
+					&:first-child {
+						.font(lato-black);
+					}
+				}
+			}			
 		}
 	}
 	#edit-user {
