--- a/styles/styles.less
+++ b/styles/styles.less
@@ -1,4 +1,5 @@
-@import "boilerplate.less";
+@import "normalize.less";
+@import "fonts.less";
 @import "mixins.less";
 @import "../images/sprites.less";
 @import "header/main.less";
